# opencv-server

./: Linguist.py  OCR.py  client.py  main.py  pyproject.toml  server.py
client/: pyproject.toml
server/: pyproject.toml  requirements.txt
